配件匹配重构 + 配置库版本号机制 + 产品信息/标题库改JSON + 双预览
  后端：
  - AccessoryRuleService.resolveForMain 配件匹配重构：排除组合装(含+套装)污染、
    精确匹配优先(cd/nm==kw → 去*N后==kw → 兜底)，根治 106 配错滤芯(052→001)、
    底座配错(万向免钉黑→银底座)
  - 新增配置库版本号机制：PromptLoader.loadVersioned 比对 classpath 与 userDataDir
    缓存的 _v，classpath 更高则自动覆盖，根治"改 classpath 配置要手删缓存"的坑
  - 产品信息预设、商品标题库 由读 xlsx 改为读 resources/prompt/*.json，
    新增 load/save + GET/POST 接口支持界面编辑保存；readProductInfoPresets 跳过 _v 元数据 key
  - accessory-rules.json 按花洒配件信息.xlsx 重新生成 byMainCode(底座 keyword 泛底座→银底座)
  - 三个配置库 JSON 加 _v 版本号(accessory-rules:2, 其余:1)
  - 删除改动造成的孤儿 getCellStr

  前端(app.js)：
  - spConfirm/lyAutoRun 配件型号锁规则库(spLoadRules 预载 + spConfirm await 兜底 +
    spRuleFilterKw 三级模糊匹配)，userAdded 手动加配件尊重用户
  - SKU 图预览移至左侧预览区(lstRenderImgPreview 加 SKU 图组)、移除右侧行内缩略图
  - ERP 选品列表加缩略图(erpRenderList 带 picPath) + 搜索精确匹配置顶(erpSortByUsage)
  - 产品信息预设/标题库编辑器：openProductInfoEditor/saveProductInfoPresets
  - 配件锁定/规则匹配诊断日志

  转换脚本：花洒配件信息.xlsx → byMainCode；产品信息填写参考.xlsx →
    product-info-presets.json；商品标题库.xlsx → title-lib.json

  前端(index.html)：产品信息「📋预设库」按钮 + 预设编辑器/标题库编辑器 modal

  清理：删除项目根误落地的过时运行时缓存(accessory-rules/product-info-presets/title-lib.json)